@@ -6662,4 +6662,8 @@ No match
     \x0a\x0b\x0c\x0d
  0: \x0a\x0b\x0c\x0d
 
+/^\c/
+    ?
+ 0: ?
+
 /-- End of testinput1 --/
